# learning-credentials

./: .annotation_safe_list.yml  .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.rst  Makefile  README.rst  catalog-info.yaml  mise.toml  pyproject.toml  setup.py  test_settings.py  tox.ini
.github/workflows/: ci.yml  pypi-publish.yml
docs/: Makefile  conf.py  getting_started.rst  index.rst  internationalization.rst  make.bat  testing.rst
docs/concepts/: index.rst
docs/decisions/: 0001-purpose-of-this-repo.rst  0002-architecture.rst
docs/how-tos/: configure-pdf-credentials.rst  index.rst
docs/quickstarts/: index.rst
docs/references/: index.rst
learning_credentials/: __init__.py  admin.py  api.py  apps.py  compat.py  exceptions.py  generators.py  models.py  processors.py  tasks.py  xblocks.py
learning_credentials/api/v1/: permissions.py  serializers.py  urls.py  views.py
learning_credentials/migrations/: 0001_squashed_0010.py  0008_validation.py  0009_credential_user_fk.py  0010_credential_configuration_fk.py
openedx_certificates/: models.py
requirements/: base.txt  ci.txt  dev.txt  doc.txt  pip.txt  quality.txt  test.txt
tests/: conftest.py  test_admin.py  test_generators.py  test_migrations.py  test_models.py  test_processors.py  test_tasks.py  test_views.py
